fix formatting on mobile

--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  padding: 2em;
+  padding: 2em 1em;
 }
 
 #statement {
@@ -105,8 +105,8 @@ header .logo a{
 }
 
 div#avatar {
-  width: 400px;
-  height: 400px;
+  width: 390px;
+  height: 390px;
   background-image: url("new_alice.jpg");
   background-size: cover;
   background-clip: border-box;
@@ -116,8 +116,8 @@ div#avatar {
 }
 
 div#avatar img{
-  width: 400px;
-  height: 400px;
+  width: 390px;
+  height: 390px;
   opacity: 0;
 }
 
@@ -224,7 +224,7 @@ blockquote::after {
 
 blockquote div {
   flex: 8;
-  min-width: 400px;
+  min-width: 350px;
 }
 
 footer {
@@ -249,9 +249,13 @@ footer .copyright{
   margin-top: 0;
 }
 
+#testimonials {
+  padding: 2em 0.3em;
+}
+
 #carrousel {
   position: relative;
-  height: 400px;
+  height: 430px;
   width: 100%;
   /* min-width: 800px */
 }
